[gd_scene load_steps=9 format=3 uid="uid://spawn-manager-test"]

[ext_resource type="PackedScene" path="res://characters/PlayerCharacter.tscn" id="1_player"]
[ext_resource type="Script" path="res://game/CameraController.gd" id="2_camera"]
[ext_resource type="Script" path="res://tests/TestSpawnManager.gd" id="3_controller"]
[ext_resource type="Script" path="res://tests/SpawnPointVisual.gd" id="4_spawn_vis"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.7, 0.3, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1"]
material = SubResource("StandardMaterial3D_1")
size = Vector3(60, 0.1, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(60, 0.1, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.8, 0.2, 0.2, 0.5)
transparency = 1

[node name="TestSpawnManager" type="Node3D"]
script = ExtResource("3_controller")

[node name="Ground" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_1")

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("2_camera")
look_at_offset = Vector3(0, 1, 0)
tilt_angle = 45.0
zoom_speed = 2.0
min_zoom = 8.0
max_zoom = 30.0
follow_smoothness = 8.0

[node name="CameraPivot" type="Node3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
fov = 45.0

[node name="SpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint1" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1, -20)
script = ExtResource("4_spawn_vis")

[node name="SpawnPoint2" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 1, -20)
script = ExtResource("4_spawn_vis")

[node name="SpawnPoint3" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 1, 20)
script = ExtResource("4_spawn_vis")

[node name="SpawnPoint4" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 1, 20)
script = ExtResource("4_spawn_vis")

[node name="SpawnPoint5" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -25)
script = ExtResource("4_spawn_vis")

[node name="SpawnPoint6" type="Marker3D" parent="SpawnPoints" groups=["spawn_points"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 25)
script = ExtResource("4_spawn_vis")



[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugPanel" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0.9)
offset_right = 350.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Spawn Manager Test"

[node name="HSeparator" type="HSeparator" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="Controls" type="Label" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "SPACE - Apply damage
R - Manual respawn
K - Instant kill
M - Cycle spawn mode
T - Cycle spawn point
WASD - Move"

[node name="HSeparator2" type="HSeparator" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Health: 100/100"

[node name="LivesLabel" type="Label" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Lives: 3/3"

[node name="StatusLabel" type="Label" parent="UI/DebugPanel/VBoxContainer"]
layout_mode = 2
text = "Status: Alive"

